Update NavBar and changed website font to Inter.

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,11 @@
       href="https://cdn.auth0.com/js/auth0-samples-theme/1.0/css/auth0-theme.min.css"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+    />
+
     <title>React SDK Sample</title>
   </head>
   <body class="h-100">
